[package]
name = "driller"
version = "0.10.0-alpha.3"
authors = ["Ferran Basora <fcsonline@gmail.com>", "Andreas Kapp <zoosky@gmail.com>"]
description = "Driller is a HTTP load testing application written in Rust inspired by Ansible syntax. Friendly fork of fcsonline/drill."
repository = "https://github.com/zoosky/driller"
keywords = ["performance", "http", "ansible", "jmeter"]
license = "GPL-3.0"
edition = "2024"
rust-version = "1.85"
exclude = [
    ".github/",
    ".gitignore",
    ".rustfmt.toml",
    "example/server/",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
csv = "1.0.5"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
serde_yaml = "0.9"
url = "2.1.1"
linked-hash-map = "0.5.3"
tokio = { version = "1.43.1", features = ["time", "net"] }
reqwest = { version = "0.12.28", features = ["cookies", "trust-dns"] }
async-trait = "0.1.30"
futures = "0.3.5"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
rand = "0.10"
hdrhistogram = "7.4.0"
hex = "0.4.3"

# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "0.9.66"

[features]
# Force openssl-sys to statically link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]

[dev-dependencies]
tempfile = "3.8"
