[package]
name = "driller"
version = "0.10.0-alpha.4"
authors = ["Ferran Basora <fcsonline@gmail.com>", "Andreas Kapp <zoosky@gmail.com>"]
description = "Driller is a HTTP load testing application written in Rust inspired by Ansible syntax. Friendly fork of fcsonline/drill."
repository = "https://github.com/zoosky/driller"
keywords = ["performance", "http", "ansible", "jmeter"]
license = "GPL-3.0-only"
edition = "2024"
rust-version = "1.95"
exclude = [
    ".github/",
    ".gitignore",
    ".rustfmt.toml",
    "example/server/",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
csv = "1.0.5"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
serde_yaml = "0.9"
url = "2.1.1"
linked-hash-map = "0.5.3"
tokio = { version = "1.43.1", features = ["time", "net"] }
reqwest = { version = "0.13", features = ["cookies", "hickory-dns"] }
async-trait = "0.1.30"
futures = "0.3.5"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
rand = "0.10"
hdrhistogram = "7.4.0"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.8"
